--- a/mypaper.bib
+++ b/mypaper.bib
@@ -16,415 +16,11 @@
   author={Mehrnoosh Mirtaheri and \textbf{KSM Tozammel Hossain} and Fred Morstatter and Aram Galstyan}, 
   year={2019},
   booktitle={ICML Workshop},
+  xbooktitle={Learning and Reasoning with Graph-Structured Data (ICML 2019 Workshop)},
   xpublisher={},
   xnote = {[Under review]},
   shorthand={ICML WS '19},
   keywords = {C},
   xaddendum={[ICML Workshop]},
   %mylabel={AAAI-18},
-}
-% Learning and Reasoning with Graph-Structured Data (ICML 2019 Workshop)
-
-@article{tozammel:2019:TFO,
-  title={Tensor-based Method for Temporal Geopolitical Event Forecasting}, 
-  author={Mehrnoosh Mirtaheri and \textbf{KSM Tozammel Hossain} and Fred Morstatter and Aram Galstyan}, 
-  xbooktitle={},
-  year={2019},
-  xpublisher={},
-  xnote = {[Under review]},
-  shorthand={ICML-W '19},
-  keywords = {U},
-  addendum={[Under review in ICML Workshop]},
-  %mylabel={AAAI-18},
-}
-
-@article{tozammel:2019:IEP,
-  title={Identifying Event Precursors using Attention-based {LSTMs}}, 
-  author={\textbf{KSM Tozammel Hossain} and Hrayr  Harutyunyan and Yue  Ning and 
-         Brendan  Kennedy and  Naren Ramakrishnan and Aram Galstyan}, 
-  xbooktitle={Proceedings of the Thirtieth AAAI Conference on Artificial Intelligence (AAAI)},
-  year={2019},
-  xpublisher={},
-  xnote = {[Under review]},
-  xshorthand={TKDE '19},
-  keywords = {U},
-  addendum={[Under review in TKDE]},
-  %mylabel={AAAI-18},
-}
-
-@article{tozammel:2018:DSF,
-  title={Discovering Signals from Web Sources to Predict Cyber Attacks},
-  author={Goyal, Palash$^\dagger$ and \textbf{Hossain$^\dagger$}, \textbf{KSM Tozammel} and Deb, Ashok and Tavabi, Nazgol and Bartley, Nathan and Abeliuk, Andr'es and Ferrara, Emilio and Lerman, Kristina},
-  journal={arXiv preprint arXiv:1806.03342},
-  addendum={[Under review in IEEE Systems]},
-  keywords = {U},
-  year={2018}
-}
-
-@inproceedings{sensor-epidamic,
-  title={Forecasting the Flu: Designing Social Network Sensors for Epidemics}, 
-  author={Huijuan Shao$^\dagger$ and \textbf{KSM Tozammel Hossain$^\dagger$} and Hao Wu and 
-        Maleq Khan and Anil Vullikanti and B Aditya Prakash and Madhav Marathe 
-        and  Naren Ramakrishnan},
-  year={2018},
-  booktitle={Proceedings of the ACM SIGKDD Workshop on Epidemiology meets Data Mining and Knowledge Discovery},
-  shorthand={epiDAMIK '18},
-  keywords = {C},
-  xaddendum={[Under review in KDD '16]},
-  mylabel={epiDAMIK-16},
-}
-
-
-@article{tozammel:2018:FVE,
-  title={Forecasting violent events in the {Middle} {East} and {North} {Africa} using {HMM} and regularized autoregressive models}, 
-  author={\textbf{KSM Tozammel Hossain} and Shuyang Gao and  
-     Brendan Kennedy and Aram Galstyan and  Prem Natarajan},
-  year={2018},
-  journal={Journal of Defense Modeling and Simulation},
-  keywords = {J},
-  shorthand={JDMS '18},
-  addendum={[Accepted]},
-  xnote = {In progress},
-}
-
-@misc{rare-def,
-  title={Temporal Predictive Models with External Signals}, 
-  author={A.~Galstyan and S.~Gao and \textbf{KSM Tozammel Hossain} and T.~Hughes and 
-     B.~Kennedy and  P.~Natarajan},
-  year={2017},
-  keywords = {U},
-  shorthand={DEF '17},
-  addendum={[Under review]},
-  xnote = {In progress},
-}
-
-@article{florian:2018:raptor,
-  title={RAPTOR: Ransomware Attack PredicTOR},
-  author={Quinkert, Florian and Holz, Thorsten and \textbf{Hossain}, \textbf{KSM Tozammel} and Ferrara, Emilio and Lerman, Kristina},
-  journal={arXiv preprint arXiv:1803.01598},
-  keywords = {A},
-  year={2018}
-}
-
-@misc{raptor-acsac,
-  title={RAPTOR: Ransomware Attack Predictor}, 
-  author={F.~Quinkert and T.~Holz and \textbf{KSM Tozammel Hossain} and E.~Ferrara and  K.~Lerman},
-  year={2017},
-  keywords = {U},
-  shorthand={ACSAC '17},
-  addendum={[Under review in ACSAC '17]},
-  xnote = {In progress},
-}
-
-
-@article{sensor-arxiv,
-  title={Forecasting the Flu: Designing Social Network Sensors for Epidemics}, 
-  author={Huijuan Shao$^\dagger$ and \textbf{KSM Tozammel Hossain$^\dagger$} and Hao Wu and 
-        Maleq Khan and Anil Vullikanti and B Aditya Prakash and Madhav Marathe 
-        and  Naren Ramakrishnan},
-  xjournal={PLoS ONE},
-  journal={arXiv},
-  year={2016},
-  xpublisher = {Public Library of Science},
-  xnote = {[Under review]},
-  xshorthand={PLoSONE '16},
-  shorthand={arXiv '16},
-  keywords = {A},
-  xkeywords = {U},
-  xaddendum={[Under review in KDD '16]},
-  mylabel={PLoSONE-16},
-}
-
-
-@inproceedings{physico-biokdd,
-  title={Using Physicochemical Properties of Amino Acids to Induce Graphical
-Models of Residue Couplings}, 
-  author={\textbf{KSM Tozammel Hossain} and Chris Bailey-Kellogg and 
-        Alan M Friedman and Michael J Bradley and 
-        Nathan Baker and Naren Ramakrishnan},
-  booktitle={Proceedings of the Tenth International Workshop on Data Mining in Bioinformatics},
-  xseries = {BIOKDD '11},
-  pages = {3:1--3:10},
-  year={2011},
-  xorganization={ACM},
-  publisher={ACM},
-  location = {San Diego, California},
-  articleno = {3},
-  xisbn = {978-1-4503-0839-7},
-  xurl = {http://doi.acm.org/10.1145/2003351.2003354},
-  xdoi = {10.1145/2003351.2003354},
-  keywords = {C},
-  shorthand={BIOKDD '11},
-  xmylabel={BIOKDD-11}
-}
-
-@inproceedings{armicore-acmbcb,
-  title={Improved Multiple Sequence Alignments using Coupled Pattern Mining},
-  author={\textbf{KSM Tozammel Hossain} and Debprakash Patnaik and Srivatsan Laxman and 
-        Prateek Jain and Chris Bailey-Kellogg and Naren Ramakrishnan},
-  booktitle={Proceedings of the ACM Conference on Bioinformatics, Computational
-    Biology and Biomedicine}, 
-  xseries = {BCB '12},
-  xisbn = {978-1-4503-1670-5},
-  location = {Orlando, Florida},
-  pages={28--35},
-  year={2012},
-  publisher = {ACM},
-  xorganization={ACM},
-  xurl = {http://doi.acm.org/10.1145/2382936.2382940},
-  xdoi = {10.1145/2382936.2382940},
-  shorthand={BCB '12},
-  keywords = {C},
-  addendum={[Acceptance Rate 33/159 = 20.75\%]},
-  mylabel={ACMBCB-12}
-}
-
-@article{armicore-tcbb,
-  title={Improved Multiple Sequence Alignments using Coupled Pattern Mining},
-  author={\textbf{KSM Tozammel Hossain} and Debprakash Patnaik and Srivatsan Laxman and 
-        Prateek Jain and Chris Bailey-Kellogg and Naren Ramakrishnan},
-  journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics},
-  volume={10},
-  number={5},
-  pages={1098--1112},
-  year={2013},
-  month = {Sep},
-  issue_date = {September 2013},
-  xurl = {http://dx.doi.org/10.1109/TCBB.2013.36},
-  xissn = {1545-5963},
-  publisher={IEEE Computer Society Press},
-  xdoi = {10.1109/TCBB.2013.36},
-  keywords = {J},
-  shorthand={TCBB '13},
-  mylabel={TCBB-13}
-}
-
-@inproceedings{hfstm-icdm,
-  title={Flu Gone Viral: Syndromic Surveillance of Flu on Twitter using Temporal Topic Models},
-  xauthor={Liangzhe Chen$^\dagger$ and \textbf{KSM Tozammel Hossain$^\dagger$} and Patrick Butler and 
-        Naren Ramakrishnan and B Aditya Prakash},
-  author={Liangzhe Chen$^\dagger$ and \textbf{KSM Tozammel Hossain$^\dagger$} and 
-      Patrick Butler and Naren Ramakrishnan and B Aditya Prakash},
-  booktitle = {Proceedings of the 2014 IEEE International Conference on Data Mining},
-  xbooktitle={The IEEE International Conference on Data Mining (ICDM)},
-  xseries = {ICDM '14},
-  year={2014},
-  pages = {755--760},
-  xisbn = {978-1-4799-4302-9},
-  xurl = {http://dx.doi.org/10.1109/ICDM.2014.137},
-  xdoi = {10.1109/ICDM.2014.137},
-  publisher = {IEEE Computer Society},
-  shorthand={ICDM '14},
-  addendum={[Acceptance Rate 142/727 = 19.53\%]},
-  keywords = {C},
-  mylabel={ICDM-14},
-  xnote = {\blfootnote{$^\dagger$Both authors contributed equally to this work}}
-}
-
-
-@article{hfstm-dami,
-  title={Syndromic Surveillance of Flu on Twitter using Weakly Supervised
-        Temporal Topic Models}, 
-  author={Liangzhe Chen and \textbf{KSM Tozammel Hossain} and Patrick Butler and 
-        Naren Ramakrishnan and B Aditya Prakash},
-  journal={Data Mining and Knowledge Discovery (DAMI)},
-  pages={1--30},
-  year={2015},
-  publisher={Springer US},
-  keywords = {J},
-  shorthand={DAMI '15},
-  mylabel={DAMI-15}
-}
-
-@article{hfstm-health,
-  title={Study Data from Virginia Tech Update Understanding of Epidemiology}, 
-  author={Anonymous}, 
-  journal={Health \& Medicine Week},
-  year={2016},
-  publisher={},
-  shorthand={Health '16},
-  keywords = {N},
-  addendum={Atlanta, 29 Apr 2016:5537}          },
-}
-% 
-
-//Anon, Study Data from Virginia Tech Update Understanding of Epidemiology (Syndromic surveillance of Flu on Twitter using weakly supervised temporal topic models).
-
-@inproceedings{signature-kdd,
-  title={Extracting Temporal Signatures for Comprehending Systems Biology Models},
-  author={Naren Sundaravaradan and \textbf{KSM Tozammel Hossain} and 
-      Vandana Sreedharan and Douglas J Slotta and 
-      John Paul Vergara and Lenwood S Heath and Naren Ramakrishnan},
-  booktitle={Proceedings of the Sixteenth ACM SIGKDD International Conference on
-    Knowledge Discovery and Data Mining}, 
-  xseries = {KDD '10},
-  pages={453--462},
-  year={2010},
-  location = {Washington, DC, USA},
-  xorganization={ACM},
-  xisbn = {978-1-4503-0055-1},
-  publisher={ACM},
-  shorthand={KDD '10},
-  xurl = {http://doi.acm.org/10.1145/1835804.1835863},
-  xdoi = {10.1145/1835804.1835863},
-  keywords = {C},
-  addendum={[Acceptance Rate 77/578 = 13.32\%]},
-  mylabel={KDD-10}
-}
-
-@inproceedings{pcg-walcom,
-  title={Pairwise Compatibility Graphs},
-  author={Muhammad N Yanhaona and \textbf{KSM Tozammel Hossain} and M Saidur Rahman},
-  booktitle={Proceedings of the Second International Workshop on
-    Algorithms and Computation (WALCOM)}, 
-  pages={222--233},
-  year={2008},
-  publisher={Springer},
-  shorthand={WALCOM '08},
-  keywords={C},
-  addendum={[Acceptance Rate 19/57 = 33.3\%]},
-  xannote={[Acceptance Rate 35]},
-  comment={[Acceptance Rate 35]},
-  mylabel={WALCOM-08}
-}
-
-@article{pcg-jamc,
-  title={Pairwise Compatibility Graphs},
-  author={Muhammad N Yanhaona and \textbf{KSM Tozammel Hossain} and M Saidur Rahman},
-  journal={Journal of Applied Mathematics and Computing (JAMC)},
-  volume={30},
-  number={1-2},
-  pages={479--503},
-  year={2009},
-  publisher={Springer-Verlag},
-  keywords = {J},
-  shorthand={JAMC '09},
-  mylabel={JAMC-09}
-}
-
-@inproceedings{scipm-aaai,
-  title={Inferring Multi-dimensional Ideal Points for {US Supreme Court} Justices}, 
-  author={Mohammad R Islam$^\dagger$ and \textbf{KSM Tozammel Hossain$^\dagger$} and 
-        Siddharth Krishnan and Naren Ramakrishnan}, 
-  booktitle={Proceedings of the Thirtieth AAAI Conference on Artificial Intelligence (AAAI)},
-  year={2016},
-  publisher={},
-  xnote = {[Under review]},
-  shorthand={AAAI '16},
-  keywords = {C},
-  addendum={[Acceptance Rate = 26\%]\quad 
-      (\textbf{Featured in ACM TechNews, the Conversation, and the Daily Mail, UK.})},
-  mylabel={AAAI-16},
-}
-
-@article{scipm-conversation,
-  title={What AI Can Tell Us About the {U.S. Supreme Court}}, 
-  author={Mohammad R Islam and \textbf{KSM Tozammel Hossain} and
-        Siddharth Krishnan}, 
-  journal={The Conversation},
-  year={2016},
-  publisher={},
-  xnote = {[Under review]},
-  xshorthand={Conversation '16},
-  shorthand={Conv. '16},
-  keywords = {N},
-  addendum={Available at 
-      \url{https://theconversation.com/what-ai-can-tell-us-about-the-u-s-supreme-court-55352} 
-          },
-  xaddendum={Available at 
-      \url{https://theconversation.com/what-ai-can-tell-us-about-the-u-s-supreme-court-55352} 
-          [This news is also featured on ACM Technews and the Daily Mail, UK.]},
-  mylabel={Conversation-16},
-}
-
-
-@misc{hcoup,
-  title={Higher-Order Couplings in Protein Families using Factor Graph Models}, 
-  author={\textbf{KSM Tozammel Hossain} and  Naren Ramakrishnan},
-  year={2018},
-  keywords = {P},
-  shorthand={HR '18},
-  addendum={[In progress]},
-  xnote = {In progress},
-}
-
-@misc{cascade-asonam,
-  title={Using Cascades as Sensors: A Non-network Approach to Forecast Information Contagion}, 
-  author={\textbf{KSM Tozammel Hossain$^\dagger$} and  Siddharth Krishnan$^\dagger$
-      and Naren Ramakrishnan},
-  year={2017},
-  keywords = {U},
-  shorthand={WebSci '17},
-  addendum={[Under review in WebSci '17]},
-  xnote = {In progress},
-}
-
-@misc{cascade-future,
-  title1={Are You in the Loop?: Empirical Techniques for Sensor Detection in
-    Social Media Cascades}, 
-  title2={Are You in the Loop?: Characterizing Social Media Cascades using Social Sensors}, 
-  title3={Are You in the Loop?: Forecasting Contagions using Social Sensors}, 
-  title={Are You in the Loop?: Forecasting Contagious Outbreaks using Social Sensors}, 
-  author={\textbf{KSM Tozammel Hossain} and  Siddharth Krishnan
-      and Naren Ramakrishnan},
-  year={2016},
-  keywords = {P},
-  shorthand={KHR '16},
-  addendum={[In progress]},
-  xnote = {In progress},
-}
-
-@misc{dissert,
-  title={Couplings for Modeling Evolutionary Constraints and Improving Multiple Sequence Alignments}, 
-  author={\textbf{KSM Tozammel Hossain}},
-  year={2016},
-  school={Virginia Tech},
-  keywords = {T},
-  shorthand={VT '16},
-  note = {Ph.D. Thesis, Virginia Tech},
-}
-
-@misc{qual,
-  title={Discovering Modules from Neuronal Networks}, 
-  author={\textbf{KSM Tozammel Hossain}},
-  year={2011},
-  school={Virginia Tech},
-  keywords = {T},
-  shorthand={VT '11},
-  note = {Ph.D. Qualifying Examination, Virginia Tech},
-}
-
-@misc{pcg-thesis,
-  title={Pairwise Compatibility Graphs},
-  author={Muhammad N Yanhaona and \textbf{KSM Tozammel Hossain}},
-  year={2007},
-  school={Bangladesh University of Engineering and Technology},
-  keywords = {T},
-  shorthand={BUET '07},
-  note = {B.S.~Thesis, Bangladesh University of Engineering and Technology}},
-}
-
-
-%@misc{hpcorex-informs,
-%  title={Identifying Latent Structures in Human Performance %Data using {CorEx}}, 
-%  author={\textbf{KSM Tozammel Hossain} and G.~Ver Steeg and  A.~Galstyan},
-%  year={2017},
-%  keywords = {S},
-%  shorthand={INFORMS '17},
-%  addendum={[Accepted in INFORMS '17]},
-%  xnote = {In progress},
-%}
-
-
-
-
-@misc{corex-human-performance,
-  title={Identifying latent structures in human performance data using CorEx }, 
-  author={\textbf{KSM Tozammel Hossain} and Greg Ver Steeg and Aram Galstyan},
-  year={2017},
-  keywords = {S},
-  shorthand={INFORMS '17},
-  pages = {144},
-  xaddendum={[Under review]},
-  xnote = {https://trayinc.cld.bz/Informs-Annual-Meeting-2017/144},
 }
